@@ -35,3 +35,22 @@ class Colorful_BASH_prompt_symbols(C):
     def cure(self):
         file_append(self.bashrc, self.line)
         notify( _('The color of bash prompt symbols is changed.'), _('It will take effect at the next time you log in.') )
+
+class Stardict_dictionary(C):
+    __doc__ = _('Install Stardict dictionaries')
+    def exists(self):
+        if not RPM.installed('stardict'):
+            return False
+        self.pkgs = []
+        locale1 = Config.get_locale()
+        locale2 = locale1.split('_')[0]
+        pkg1 = 'stardict-dic-' + locale1
+        pkg2 = 'stardict-dic-' + locale2
+        for p in [pkg1, pkg2]:
+            if RPM.exist(p) and not RPM.installed(p):
+                self.pkgs.append(p)
+        self.detail = _('Command:') + ' yum install ' + ' '.join(self.pkgs)
+        return bool(self.pkgs)
+    def cure(self):
+        RPM.install(*self.pkgs)
+
