@@ -1,3 +1,7 @@
+2010-06-01 Homer Xing <homer.xing@gmail.com>
+
+    * Add stardict dictionaries in Fedora
+
 2010-05-31 Homer Xing <homer.xing@gmail.com>
 
     * Improve desktop environment detection.
